Jack sync doesn't work in 2.64, 2.64 or 2.65 stable versions #33518

Closed
opened 2012-12-13 14:15:00 +01:00 by Mario Mey · 4 comments

%%%Jack sync (AV-sync), to use with Ardour, for example, doesn't work in stable versions. At configuring Jack in Preferences, console says:

unknown option character l
/usr/bin/pasuspender: opción inválida -- 'T'

AV-sync works OK in a home compiled version, 2.65 50250. I don't know if newer version works, because I can't compile now (because of Python 3.3...)%%%

%%%Jack sync (AV-sync), to use with Ardour, for example, doesn't work in stable versions. At configuring Jack in Preferences, console says: unknown option character l /usr/bin/pasuspender: opción inválida -- 'T' AV-sync works OK in a home compiled version, 2.65 50250. I don't know if newer version works, because I can't compile now (because of Python 3.3...)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%My distro's (arch linux) blender 2.65 and my own compiled one run fine. The official binary gives me this output as soon as I try to use jack:

client linked with incompatible libjack version.

Maybe our jack library for official releases needs updating?%%%

%%%My distro's (arch linux) blender 2.65 and my own compiled one run fine. The official binary gives me this output as soon as I try to use jack: client linked with incompatible libjack version. Maybe our jack library for official releases needs updating?%%%

%%%Commited changes to build configurations, now builds from http://builder.blender.org/download/ shall work fine.

Thanks for the report, closing.%%%

%%%Commited changes to build configurations, now builds from http://builder.blender.org/download/ shall work fine. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33518
No description provided.