build_files/buildbot/config/user-config-player-glibc211-i686.py
@@ -103,9 +103,8 @@ BF_BOOST_LIB_STATIC = '${BF_BOOST_LIBPATH}/libboost_filesystem.a ${BF_BOOST_LIBP
 BF_BOOST_LIBPATH = '${BF_BOOST}/lib'
 
 # JACK
-WITH_BF_JACK = False
-WITH_BF_STATICJACK = True
-BF_JACK_LIB_STATIC = '${BF_ZLIB}/lib/libjack.a'
+WITH_BF_JACK = True
+WITH_BF_JACK_DYNLOAD = True
 
 # Motion Tracking
 WITH_BF_LIBMV = False
